--- a/src/components/home/styles/ModalHome.css
+++ b/src/components/home/styles/ModalHome.css
@@ -32,7 +32,7 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 1rem;
-    background-color: white;
+    background-color: rgba(228, 228, 228, 0.752);
     z-index: 1;
   }
   
