--- a/src/components/home/styles/NavFilterPub.css
+++ b/src/components/home/styles/NavFilterPub.css
@@ -105,6 +105,7 @@
   
   .navfilter {
     background-color: white;
+    border: none;
   }
   
   @media screen and (min-width: 768px) and (max-width: 1024px) {
