--- a/src/components/post/CardPost/styles/PostCard3.css
+++ b/src/components/post/CardPost/styles/PostCard3.css
@@ -1,36 +1,36 @@
-.postcard {
+.postcard3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    height: 25vh;
+    height: 20vh;
     width: 95vw;
   }
   
-  .dateText h2 span {
+  .dateText h3 span {
     font-size: 0.5rem;
   }
   
-  .postcard * {
+  .postcard3 * {
     font-size: 0.8rem;
     font-family: var(--font);
   }
   
-  .headercard {
+  .headercard3 {
     display: flex;
     justify-content: space-around;
     padding: 0.5rem;
-    background-color: var(--light-purple);
+    background-color: var(--mint-blue);
   }
   
-  .headercard h2 {
+  .headercard h3 {
     font-weight: 600;
   }
   
-  .contentcard {
+  .contentcard3 {
     height: 70%;
-    background-color: var(--light-purple);
+    background-color: var(--mint-blue);
     display: flex;
     text-align: justify;
     justify-content: center;
@@ -39,7 +39,7 @@
     color: white;
   }
   
-  .contentcard * {
+  .contentcard3 * {
     font-weight: 300;
   }
   
@@ -55,11 +55,14 @@
     margin-right: 10px;
     cursor: pointer;
   }
+
   
   @media screen and (min-width: 768px) and (max-width: 1024px) {
-    .postcard {
-      height: 15vh;
-      width: 45vw;
+    .postcard3 {
+      width: 85vw;
+    }
+    .postcard3 * {
+      font-size: 1rem;
     }
     .icon-comment {
       width: 6%;
@@ -67,11 +70,10 @@
   }
   
   @media screen and (min-width: 1024px) {
-    .postcard {
-      height: 20vh;
+    .postcard3 {
       width: 60vw;
     }
-    .postcard * {
+    .postcard3 * {
       font-size: 1.1rem;
     }
     .icon-comment {
