--- a/src/components/post/styles/ButtonPublierPost.css
+++ b/src/components/post/styles/ButtonPublierPost.css
@@ -10,6 +10,7 @@
     color: var(--mint-blue);
     border-radius: 10px;
     font-family: var(--font);
+    border: none;
   }
   
   @media screen and (min-width: 768px) and (max-width: 1024px) {
