--- a/src/pages/styles/Home.css
+++ b/src/pages/styles/Home.css
@@ -2,3 +2,8 @@ body {
     background-color: var(--white);
   }
   
+.Home-PostCards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
